--- a/README.textile
+++ b/README.textile
@@ -4,15 +4,13 @@ p. This plugin allows for restricted assess to websites, pages or sectiions of t
 
 p. JavaScript management plugin for "Textpattern":http://www.textpattern.com/.
 
-p. Create, edit and delete scripts in Textpattern admin and export on save to external files.
-
 p. REQUIRES: *Textpattern*, tested with v4.7.2 and v4.8.4
 
 p. "DOWNLOAD":https://raw.github.com/eliph/ax_ipcheck/master/ax_ipcheck.txt
 
 h2. Instructions
 
-<txp:ax_ipcheck fromip="129.206.0.0" toip="129.206.255.255">
+bc. <txp:ax_ipcheck fromip="129.206.0.0" toip="129.206.255.255">
     IP ok
 <txp:else />
     IP not ok
@@ -25,4 +23,4 @@ h2. Notes
 h2. Version history
 
 0.1 - December 2020
-* first release.
+first release.
