--- a/README.textile
+++ b/README.textile
@@ -2,7 +2,7 @@ h1. ax_ipcheck
 
 p. This plugin allows for restricted assess to websites, pages or sectiions of textpattern code by checking for IP ranges of the allowed clients
 
-p. REQUIRES: *Textpattern*, tested with v4.7.2 and v4.8.4
+p. REQUIRES: "Textpattern CMS", tested with v4.7.2 and v4.8.4
 
 p. "DOWNLOAD":https://raw.github.com/eliph/ax_ipcheck/master/ax_ipcheck.txt
 
