--- a/README.textile
+++ b/README.textile
@@ -1,6 +1,6 @@
 h1. ax_ipcheck
 
-p. This plugin allows for restricted assess to "Textpattern":https://textpattern.com/ websites, pages or sectiions of textpattern code by checking for IP ranges of the allowed clients.
+p. This plugin allows for restricted assess to "Textpattern":https://textpattern.com/ websites, pages or sectiions of textpattern code by checking for an allowed IP range of the client.
 
 p. REQUIRES: "Textpattern CMS":https://textpattern.com/, tested with v4.7.2 and v4.8.4
 
