--- a/README.textile
+++ b/README.textile
@@ -1,20 +1,28 @@
 h1. ax_ipcheck
 
-p. This plugin allows for restricted assess to "Textpattern":https://textpattern.com/ websites, pages or sectiions of code by checking for an allowed IP range of the client.
+p. This plugin allows for restricted assess to websites, pages or sectiions of textpattern code by checking for IP ranges of the allowed clients
 
-p. REQUIRES: "Textpattern CMS":https://textpattern.com/, tested with v4.7.2 and v4.8.4
+p. JavaScript management plugin for "Textpattern":http://www.textpattern.com/.
+
+p. REQUIRES: Textpattern*:https://textpattern.com/, tested with v4.7.2 and v4.8.4
 
 p. "DOWNLOAD":https://raw.github.com/eliph/ax_ipcheck/master/ax_ipcheck.txt
 
 h2. Tags
 
-bc. <txp:ax_ipcheck fromip="192.168.0.0" toip="192.168.255.255">
-    IP ok
+<txp:ax_ipcheck fromip="129.206.0.0" toip="129.206.255.255">
+
+h2. Example
+
+bc. <txp:ax_ipcheck fromip="129.206.0.0" toip="129.206.255.255">
+    IP address is ok
 <txp:else />
-    IP not ok
+    IP address is not ok
 </txp:ax_ipcheck>
 
 h2. Notes
+
+If more than one IP range is required, the PHP code must be changed.
 
 h2. Version history
 
