--- a/README.textile
+++ b/README.textile
@@ -1,16 +1,12 @@
 h1. ax_ipcheck
 
-p. This plugin allows for restricted assess to websites, pages or sectiions of textpattern code by checking for IP ranges of the allowed clients
+p. This lets you show parts of a page only to visitors with an allowed IP range of the client. Tested with Textpattern*:https://textpattern.com/ v4.7.2 and v4.8.4.
 
-p. JavaScript management plugin for "Textpattern":http://www.textpattern.com/.
-
-p. REQUIRES: Textpattern*:https://textpattern.com/, tested with v4.7.2 and v4.8.4
-
-p. "DOWNLOAD":https://raw.github.com/eliph/ax_ipcheck/master/ax_ipcheck.txt
+p. "DOWNLOAD":https://raw.github.com/eliph/ax_ipcheck/master/ax_ipcheck_v010.txt
 
 h2. Tags
 
-<txp:ax_ipcheck fromip="129.206.0.0" toip="129.206.255.255">
+bc. <txp:ax_ipcheck fromip="129.206.0.0" toip="129.206.255.255">
 
 h2. Example
 
